<resources>
    <string name="app_name" translatable="false">Classic</string>
    <string name="AbsorbDescription">Regulating battery voltage at absorb set point.</string>
    <string name="BulkMPPTDescription">Max power point tracking until absorb voltage reached.</string>
    <string name="FloatDescription">Battery is full and regulating battery voltage at float set point.</string>
    <string name="FloatMPPTDescription">Max power point tracking. Seeking float set point voltage.</string>
    <string name="EqMPPTDescription">Max power point tracking. Seeking equalize set point voltage.</string>
    <string name="RestingDescription">No power, waiting for power source.</string>
    <string name="AbsorbTitle">Absorb</string>
    <string name="BulkMPPTTitle">Bulk MPPT</string>
    <string name="FloatTitle">Float</string>
    <string name="FloatMPPTTitle">Float MPPT</string>
    <string name="EqualizeTitle">Equalized</string>
    <string name="HyperVocTitle" translatable="false">HyperVoc</string>
    <string name="EqMpptTitle">Equalizing</string>
    <string name="FoundClassic">Connected to Classic at address %1$s:%2$d </string>
    <string name="NoConnection">No connection</string>
    <string name="SettingsLabel">Settings</string>
    <string name="About">About</string>
    <string name="ApplyButton">Apply</string>
    <string name="CancelButton">Cancel</string>
    <string name="dialog_port_hint">port number</string>
    <string name="dialog_ipaddress_hint">IP Address, URI</string>
    <string name="UploadLogsSummary">Upload Logs To PVOutput</string>
    <string name="APIKeyTitle" translatable="false">API Key</string>
    <string name="APIKeyPrompt" translatable="false">API Key:</string>
    <string name="APIKeyDialogTitle" translatable="false">API Key</string>
    <string name="SIDDialogTitle" translatable="false">SID</string>
    <string name="SIDDialogMessage" translatable="false">SID:</string>
    <string name="SIDTitle" translatable="false">SID</string>
    <string name="ClearLogsTitle">Clear recorded logs</string>
    <string name="PVOutputPreferenceTitle" translatable="false">PVOutput</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="network">Network</string>
    <string name="PowerTabTitle">Power</string>
    <string name="EnergyTabTitle">Energy</string>
    <string name="StateOfChargeTabTitle">State of Charge</string>
    <string name="LoadTabTitle">Consumption</string>
    <string name="SystemTabTitle">System</string>
    <string name="TemperatureTabTitle">Temperature</string>
    <string name="DayLogTabTitle">Day log calendar</string>
    <string name="DayChartTabTitle">Day Log Chart</string>
    <string name="HourChartTabTitle">Hour Log Chart</string>
    <string name="MessagesTabTitle">Messages</string>
    <string name="PVVoltTitle">Input Volts</string>
    <string name="PVCurrentTitle">Input Current</string>
    <string name="BatVoltsTitle">Battery Volts</string>
    <string name="BatPowerTitle">Power</string>
    <string name="PowerTitle">Power</string>
    <string name="LoadCurrentTitle">Current</string>
    <string name="LoadTitle">Consumption</string>
    <string name="LoadPowerTitle">Power</string>
    <string name="EnergyTodayTitle">Energy Today</string>
    <string name="TotalEnergyTitle">Total Energy (kWh)</string>
    <string name="energy_unit" translatable="false">kWh</string>
    <string name="power_unit" translatable="false">Watts</string>
    <string name="amp_unit">Amps</string>
    <string name="PCBTemperature" translatable="false">PCB</string>
    <string name="FETTemperature" translatable="false">FET</string>
    <string name="BatTemperature">Battery</string>
    <string name="Calendar">Calendar</string>
    <string name="CalendarFloat">(Float)</string>
    <string name="info_model_title">Model:</string>
    <string name="info_mac_title">MAC Address:</string>
    <string name="info_unitid_title" translatable="false">Unit ID:</string>
    <string name="info_ipaddress_title">IP Address:</string>
    <string name="info_name_title">Unit Name:</string>
    <string name="info_classic_rev_title" translatable="false">Classic Rev:</string>
    <string name="info_network_rev_title">Network Rev:</string>
    <string name="info_last_voc_title">Last VOC:</string>
    <string name="info_build_date_title">Software Build Date:</string>
    <string name="info_nominal_battery_voltage">Nominal Battery Voltage:</string>
    <string name="info_tempreature_compensated_battery_voltage">Target Battery Voltage:</string>
    <string name="info_message_1">Classic Over Temperature</string>
    <string name="info_message_2">Classic EEprom read/write found an error</string>
    <string name="info_message_100">Input Voltage is lower than battery voltage.</string>
    <string name="info_message_200">User current limit or internal temperature current limit reached.</string>
    <string name="info_message_400">Hyper Voc input voltage is above maximum Classic input rating.</string>
    <string name="info_message_4000">Aux 1 ON (aux 1 connector has voltage or relay is closed).</string>
    <string name="info_message_8000">Aux 2 ON (aux 2 connector has voltage present).</string>
    <string name="info_message_10000">Ground Fault detected.</string>
    <string name="info_message_20000">DEFCON 4: FET Drive Error.</string>
    <string name="info_message_40000">Arc Fault occurred.</string>
    <string name="info_message_100000">DEFCON 3: FET Error.</string>
    <string name="info_message_400000">Partial Shade detected during SOLAR sweep.</string>
    <string name="info_message_8000000">Temperature sensor is shorted.</string>
    <string name="reasonsForResting_message_1">Wake state.</string>
    <string name="reasonsForResting_message_2">Insane Ibatt on WakeUp state.</string>
    <string name="reasonsForResting_message_3">Negative current on WakeUp state.</string>
    <string name="reasonsForResting_message_4">Code 4.</string>
    <string name="reasonsForResting_message_5">Too low power and Vbatt below set point for 90 seconds.</string>
    <string name="reasonsForResting_message_6">FET temperature >= 100C Hot.</string>
    <string name="reasonsForResting_message_7">Ground Fault.</string>
    <string name="reasonsForResting_message_8">Arc Fault.</string>
    <string name="reasonsForResting_message_9">Negative current.</string>
    <string name="reasonsForResting_message_10">Battery less than 8 Volts.</string>
    <string name="reasonsForResting_message_11">Low Light #1.</string>
    <string name="reasonsForResting_message_12">Low Light #2.</string>
    <string name="reasonsForResting_message_13">Code 13.</string>
    <string name="reasonsForResting_message_14">Low Light #3.</string>
    <string name="reasonsForResting_message_15">Low Light #4.</string>
    <string name="reasonsForResting_message_16">Disabled.</string>
    <string name="reasonsForResting_message_17">Vpv > 150V .</string>
    <string name="reasonsForResting_message_18">Vpv > 200V .</string>
    <string name="reasonsForResting_message_19">Vpv > 250V .</string>
    <string name="reasonsForResting_message_22">Average Battery Voltage is too high above set point.</string>
    <string name="reasonsForResting_message_25">Battery breaker tripped.</string>
    <string name="reasonsForResting_message_26">Mode changed while running.</string>
    <string name="reasonsForResting_message_27">Code 27.</string>
    <string name="reasonsForResting_message_28">NOT Resting but RELAY is not engaged for some reason.</string>
    <string name="reasonsForResting_message_29">ON/OFF stays off because WIND GRAPH is insane.</string>
    <string name="reasonsForResting_message_30">Code 30.</string>
    <string name="reasonsForResting_message_31">Peak negative battery current.</string>
    <string name="reasonsForResting_message_32">Aux 2 Logic input is high.</string>
    <string name="reasonsForResting_message_33">OCP in a mode other than Solar or PV-Used.</string>
    <string name="reasonsForResting_message_34">Code 34.</string>
    <string name="reasonsForResting_message_35">LOW LOW battery.</string>
    <string name="reasonsForResting_message_36">Battery temperature is Greater than specified.</string>
    <string name="reasonsForResting_message_38">Other charging sources appear to be active.</string>
    <string name="reasonsForResting_message_136">Battery temperature fell below specified.</string>
    <string name="reasonsForResting_message_104">Watchdog WDT reset.</string>
    <string name="reasonsForResting_message_111">Normal Power up boot.</string>
    <string-array name="minute_log_chart_selection">
        <item>Power</item>
        <item>PV Voltage</item>
        <item>Battery Voltage</item>
        <item>Battery Current</item>
        <item>Energy</item>
    </string-array>
    <string-array name="day_log_chart_selection">
        <item>Energy</item>
        <item>High Power</item>
        <item>High Temperature</item>
        <item>High Input Volts</item>
        <item>High Battery Volts</item>
        <item>Float Time</item>
    </string-array>
    <string name="BatCurrentTitle">Battery Current</string>
    <string name="ClassicNotConnecting">Attempting to connect to %1$s:%2$d</string>
    <string name="EqualizeDescription">Regulating battery voltage at equalize set point.</string>
    <string name="HyperVocDescription">Input voltage is above maximum classic operating voltage.</string>
    <string name="IPAddressPrompt">Enter a static IP address or URI and Port number</string>
    <string name="InfoTabTitle">Info</string>
    <string name="RestingTitle">Resting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="volt_unit">Volts</string>
    <string name="menu_add">Add</string>
    <string name="toast_pvoutput">Completed upload to PVOutput.org for </string>
    <string name="toast_minute_logs">Completed reading Hour logs</string>
    <string name="toast_day_logs">Completed reading Day logs</string>
    <string name="CapacityTabTitle">Capacity</string>
    <string name="amp_hours_unit">Ah</string>
    <string name="NetCapacityGaugeTitle">Net Charge</string>
    <string name="TotalCapacityTitle">Total Capacity (Ah)</string>
    <string name="Positive_AH_Title">Charge (Positive Ah)</string>
    <string name="Negative_AH_Title">Discharge (Negative Ah)</string>
    <string name="RemainingCapacityTitle">Remaining Capacity (Ah)</string>
    <string name="ShuntTemperatureTitle" translatable="false">WB Jr. Shunt</string>
    <string name="TemperatureScaleSummary">Use Fahrenheit scale</string>
    <string name="turn_off_local_app">Please make sure the Midnite Solar local app is not running on the network,\n the classic only supports one connection at a time.</string>
    <string name="gaugesPreferenceCategory">Display</string>
    <string name="connectionsPreferenceCategory">Connection</string>
    <string name="connectionsPreferenceSummary">Auto detect classic</string>
    <string name="ShowPopupSummary">Show popup messages</string>
    <string name="device_button">Controller</string>
    <string name="system_button">System</string>
    <string name="RealTimeChartTabTitle">Live Chart</string>
    <string name="SupplyCurrentTitle">Supply Current</string>
    <string name="SystemViewEnabled">System View Enabled</string>
    <string name="MPPTMode3">Slow Dynamic Solar Tracking</string>
    <string name="MPPTMode5">Wind Track Mode</string>
    <string name="MPPTMode9">Legacy P - O sweep mode</string>
    <string name="MPPTModeB">Fast SOLAR track</string>
    <string name="MPPTModeD">Micro Hydro mode</string>
    <string name="TargetVoltage">Target Battery Voltage: %1$1.1f V (currently at %2$1.1f V)</string>
    <string name="EndingAmps">Ending Amps: %1$1.1f A (currently at %2$1.1f A)</string>
    <string name="FloatTime">Float Time Today: %s</string>
    <string name="AbsorbTime">Absorb Timer: %s</string>
</resources>