<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/connectionsPreferenceCategory">

        <CheckBoxPreference
            android:key="AutoDetectClassic"
            android:summary="@string/connectionsPreferenceSummary"
            android:disableDependentsState="false"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/gaugesPreferenceCategory">

        <CheckBoxPreference
            android:key="UseFahrenheit"
            android:summary="@string/TemperatureScaleSummary"
            android:disableDependentsState="false"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="ShowPopupMessages"
            android:summary="@string/ShowPopupSummary"
            android:disableDependentsState="false"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="SystemViewEnabled"
            android:summary="@string/SystemViewEnabled"
            android:disableDependentsState="false"
            android:defaultValue="false" />

    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/PVOutputPreferenceTitle">

        <CheckBoxPreference
            android:key="UploadToPVOutput"
            android:summary="@string/UploadLogsSummary"
            android:disableDependentsState="false"
            android:defaultValue="false" />

        <EditTextPreference
            android:dialogTitle="@string/APIKeyDialogTitle"
            android:dialogMessage="@string/APIKeyPrompt"
            android:key="APIKey"
            android:title="@string/APIKeyTitle"
            android:inputType="text"
            android:maxLength="40"/>

        <EditTextPreference
            android:dialogTitle="@string/SIDDialogTitle"
            android:dialogMessage="@string/SIDDialogMessage"
            android:key="SID"
            android:title="@string/SIDTitle"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:maxLength="5"
            android:numeric="decimal"/>
        <Preference
            android:title="@string/ClearLogsTitle"
            android:icon="@drawable/ic_action_delete"
            android:key="ResetLogs" />

    </PreferenceCategory>

    <PreferenceCategory android:title="MQTT">

        <ListPreference
            android:title="MQTT mode"
            android:defaultValue="Off"
            android:key="listPref"/>

        <EditTextPreference
            android:key="brokerHost"
            android:title="MQTT broker host name"
            android:inputType="text"
            android:maxLength="16"
            android:defaultValue="mqtt.dioty.co" />

        <EditTextPreference
            android:key="mqttPort"
            android:title="MQTT broker port"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:maxLength="5"
            android:numeric="decimal"
            android:defaultValue="1883" />

        <EditTextPreference
            android:key="mqttUser"
            android:title="MQTT User"
            android:inputType="text"
            android:maxLength="32"/>

        <EditTextPreference
            android:key="mqttPassword"
            android:title="MQTT Password"
            android:inputType="text"
            android:maxLength="32" />

        <EditTextPreference
            android:key="mqttRootTopic"
            android:title="MQTT Root Topic"
            android:inputType="text"
            android:maxLength="32"/>

    </PreferenceCategory>

</PreferenceScreen>

